// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Suite get stats 1`] = `
Object {
  "done": 0,
  "failed": 0,
  "passed": 0,
  "pending": 1,
  "running": 0,
  "skipped": 0,
  "total": 1,
}
`;

exports[`Suite get stats 2`] = `
Object {
  "done": 1,
  "failed": 0,
  "passed": 1,
  "pending": 0,
  "running": 0,
  "skipped": 0,
  "total": 1,
}
`;

exports[`Suite should fail and collect messages 1`] = `
Result {
  "internalMessages": Array [
    "desc: FAIL!",
  ],
  "internalStatus": "failed",
}
`;

exports[`Suite should pass and collect messages 1`] = `
Result {
  "internalMessages": Array [
    "desc: OK",
  ],
  "internalStatus": "passed",
}
`;
